# FastCLI.Framework

./: .gitignore  LICENSE  README.md  pyproject.toml
CLI/: cli.py  errors.py  parsers.py  validaters.py
Smart/: color.py  emoji.py  panel.py  smart.py
examples/: example1_simple.py  example2_json.py  example3_test.py
fasthell/cli/: cli.py  parsers.py
fasthell/smart/: markdown.py  panel.py  progress_bar.py  smart.py  table.py
fastshell/cli/: cli.py  errors.py  parsers.py  validaters.py
fastshell/smart/: __init__.py  color.py  emoji.py  markdown.py  panel.py  progress_bar.py  smart.py  table.py
